# q-florca

./: .gitignore  Cargo.toml  deno.json  package-lock.json
book/src/: README.md  SUMMARY.md
book/src/developer-guide/: communication-and-bindings.md  driver.md  engine.md  release-process.md
book/src/reference/: release-notes.md
book/src/user-guide/: messaging.md  qflorca.md
crates/cli/: Cargo.toml
crates/cli/src/: cli.rs  lib.rs
crates/cli/src/command/: delete.rs  deploy.rs  invoke.rs  message.rs  mod.rs  new.rs
crates/cli/src/util/: inspection.rs
crates/core/: Cargo.toml
crates/core/src/: driver.rs  invocation.rs  lookup.rs
crates/core/src/deployment/: deployment_config.rs  deployment_entity.rs  mod.rs
crates/core/src/function/: function_entity.rs
crates/deployer/: Cargo.toml
crates/deployer/migrations/: 0003_sqs_queues.sql
crates/deployer/src/: deployer.rs  errors.rs  http.rs  pack.rs  repository.rs  service.rs
crates/deployer/src/aws/: aws_client.rs  aws_deploy.rs  aws_qualifier.rs
crates/deployer/src/kn/: kn_client.rs
crates/deployer/tests/: integration_test.rs
crates/deployer/tests/common/: mock_aws_client.rs
crates/deployer/tests/data/aws-example_deployment/plusOne/: function.toml
crates/deployer/tests/data/aws-example_deployment/plusOne/aws/: index.js
crates/engine/migrations/: 0002_invocations_table.sql
crates/engine/src/: driver.rs  error.rs  event_processor.rs  http.rs  inspection.rs  lib.rs  message.rs  ps.rs  repository.rs  run.rs
examples-classic/aws-example/: double.ts  start.ts
examples-classic/batches/: README.md  compute.ts  start.ts  test.bats
examples-classic/bellman-ford/: algorithm.ts  compute-node.ts  shared.ts  start.ts
examples-classic/cache/: README.md  process.ts  start.ts  test.bats
examples-classic/delay/: README.md  delay.ts  plusOne.ts  start.ts  sum.ts  test.bats
examples-classic/demo/: README.md  fetchPaths.ts
examples-classic/demo/transformImage/: function.toml
examples-classic/dependencies/: README.md  contextExample.ts  example.ts  test.bats
examples-classic/double/: start.ts  startChild.ts  sum.ts  test.bats
examples-classic/fill/: start.ts  startChild.ts  test.bats
examples-classic/flexi-consensus-kn/: Consensus.ts  start.ts
examples-classic/flexi-consensus-kn/participant/: function.toml
examples-classic/flexi-consensus-local/: participant.ts
examples-classic/html/: start.ts  test.bats
examples-classic/indent-text/: indent.ts  start.ts  test.bats
examples-classic/kn-message/: README.md  start.ts
examples-classic/messaging/aws-js/: start.ts
examples-classic/noop-aws/: measurement.ts  noop_step.ts  start.ts
examples-classic/noop-aws/noop-aws/: function.toml
examples-classic/not-found/: start.ts  test.bats
examples-classic/random-response/: child.ts  start.ts  test.bats
examples-classic/remote-invocation/: start.ts
examples-classic/remote-invocation/plusFour/: function.toml
examples-classic/sequential-map/: addOne.ts  join.ts  sequentialMap.ts  start.ts  test.bats
examples-classic/siblings/: sibling.ts  test.bats
examples-classic/siblings-timeout/: test.bats
examples-classic/simple-example/: even.ts  isEven.ts  odd.ts  start.ts  test.bats
examples-classic/states/: end.ts  middle.ts  start.ts  test.bats
examples-classic/throw/: start.ts  test.bats  throwing.ts  unreachable.ts
examples-classic/to-upper/: start.ts  test.bats  toUpper.ts
examples-classic/translate/: merge.ts  start.ts  test.bats  translateToFrench.ts  translateToGerman.ts
examples-classic/tree/: README.md  delay.ts  process.ts  processNode.ts  processWithDelay.ts  test.bats
examples-classic/tree/processNodeOnAws/: function.toml
examples-classic/wait/: README.md  child.ts  start.ts  test.bats
examples-classic/webcrawler-video/: crawl.ts  measurement.ts  start.ts
examples-classic/webcrawler-video/link-extraction-aws/: function.toml
examples/bidirectional-messaging/: README.md
examples/bidirectional-messaging/child/: function.toml
examples/bidirectional-messaging/start/: function.toml
examples/flexi-consensus-messaging/participant/: function.toml
examples/flexi-consensus-messaging/start/: function.toml
examples/flexi-consensus-phased/participant/: function.toml
examples/parallel-montecarlo/child/: function.toml
examples/parallel-montecarlo/start/: function.toml
examples/siblings/: start.ts
examples/siblings-timeout/: sibling.ts  start.ts
examples/webcrawler-batched/crawl/: function.toml
scripts/: releaseQFlorca.sh
templates/aws/nodejs24.x/: fn.js  index.js
templates/aws/python3.14/: fn.py
(+55 files in other folders)
