[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
axum = { version = "0.8.8", features = ["macros"] }
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.6.0", features = ["derive"] }
derive_more = { version = "2.1.1", features = ["full"] }
dotenvy = "0.15.7"
futures = "0.3.32"
fs_extra = "1.3.0"
itertools = "0.14.0"
reqwest = { version = "0.13.2", features = ["blocking", "json", "multipart"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8", features = [
  "runtime-tokio",
  "tls-native-tls",
  "postgres",
  "chrono",
  "uuid",
] }
regex = "1.12.3"
secrecy = "0.10.3"
tempfile = "3.27.0"
testcontainers-modules = { version = "0.15.0", features = ["postgres"] }
thiserror = "2"
tokio = { version = "1.50.0", features = ["full", "tracing"] }
toml = "1.1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
ts-rs = { version = "12.0.1", features = ["serde-json-impl", "uuid-impl"] }
uuid = { version = "1.23.0", features = ["v4", "serde"] }
walkdir = "2.5.0"
zip = "8.4.0"
zip-extensions = "0.14.1"
