[package]
name = "florca"
version = "0.9.0+Q"
edition = "2024"
autobins = false

# The CLI command is `qflorca` (queue-native FLORCA); the library crate stays
# `florca` so internal `use florca::...` paths are unaffected.
[[bin]]
name = "qflorca"
path = "src/main.rs"

[dependencies]
florca-core = { path = "../core" }
anyhow = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
aws-config = "1.8.15"
aws-sdk-sqs = "1.97.0"
chrono = { workspace = true }
clap = { workspace = true }
dotenvy = { workspace = true }
fs_extra = { workspace = true }
itertools = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
toml = { workspace = true }
walkdir = { workspace = true }
zip = { workspace = true }
zip-extensions = { workspace = true }
clap_complete = "4.6.0"
colored = "3.1.1"
ignore = "0.4.25"
rust-embed = "8.11.0"

[lints.clippy]
pedantic = "warn"
