[package]
name = "florca-core"
version = "0.8.1"
edition = "2024"

[dependencies]
chrono = { workspace = true }
clap = { workspace = true }
derive_more = { workspace = true }
reqwest = { workspace = true }
secrecy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
ts-rs = { workspace = true }
uuid = { workspace = true }

[lints.clippy]
pedantic = "warn"
missing_errors_doc = "allow"
